--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.github.googlecodelabs.icon_shop"
+        applicationId "com.shenkar.firebase.example"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
@@ -23,7 +23,11 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
+    // add this as well, find latest version on https://firebase.google.com/docs/android/setup
+    compile 'com.google.firebase:firebase-core:10.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
